<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/background_layout">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/edu"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_layout"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/tvIntr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:layout_margin="10dp"
                android:text="@string/eduIntr"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/tvIntr1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/eduIntr1"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/westernuniv"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"/>

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:src="@drawable/western"
                android:contentDescription="@string/westernImage" />

            <TextView
                android:id="@+id/tv1Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/sampleText"
                android:justificationMode="inter_word"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv1Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/ph"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv1PhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/tv1Phone"
                    android:autoLink="phone"
                    android:text="@string/westernPhoneNumber"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/fanshawecoll"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:src="@drawable/fanshawecollege"
                android:contentDescription="@string/fanshaweImage" />

            <TextView
                android:id="@+id/tv2Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/sampleText"
                android:justificationMode="inter_word"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv2Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/ph"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv2PhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/tv2Phone"
                    android:autoLink="phone"
                    android:text="@string/fanshawePhoneNumber"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/trioscoll"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:contentDescription="@string/triosImage"
                android:src="@drawable/trios"/>

            <TextView
                android:id="@+id/tv3Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/sampleText"
                android:justificationMode="inter_word"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv3Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/ph"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv3PhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/tv3Phone"
                    android:autoLink="phone"
                    android:text="@string/triosPhoneNumber"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/westerveltcoll"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:id="@+id/iv4"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:contentDescription="@string/westerveltImage"
                android:src="@drawable/westervelt"/>

            <TextView
                android:id="@+id/tv4Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/sampleText"
                android:justificationMode="inter_word"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv4Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/ph"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv4PhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/tv4Phone"
                    android:autoLink="phone"
                    android:text="@string/westerveltPhoneNumber"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/kingscoll"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:id="@+id/iv5"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:contentDescription="@string/kingsImage"
                android:src="@drawable/kings"/>

            <TextView
                android:id="@+id/tv5Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/sampleText"
                android:justificationMode="inter_word"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <RelativeLayout
                android:id="@+id/relativeLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv5Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/ph"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv5PhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/tv5Phone"
                    android:autoLink="phone"
                    android:text="@string/kingsPhoneNumber"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/borealcoll"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:id="@+id/iv6"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:contentDescription="@string/borealImage"
                android:src="@drawable/boreal"/>

            <TextView
                android:id="@+id/tv6Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:text="@string/sampleText"
                android:justificationMode="inter_word"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"/>

            <RelativeLayout
                android:id="@+id/relativeLayout6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/tv6Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/ph"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv6PhoneNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/tv6Phone"
                    android:autoLink="phone"
                    android:text="@string/borealPhoneNumber"
                    android:textColor="@color/white"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>