<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/background_layout">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/foodanddrink"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_layout"
            android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="4dp">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:src="@drawable/westernuniv"/>

            <TextView
                android:id="@+id/tvIntr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:layout_margin="10dp"
                android:text="@string/natureIntr"
                android:textColor="@color/white"
                />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="16sp"
            android:textStyle="normal"
            android:text="@string/churchkey"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>



            <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="16sp"
            android:textStyle="normal"
            android:text="@string/daves"
            android:textColor="@color/white"
            android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:textStyle="normal"
                android:text="@string/scots"
                android:textColor="@color/white"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:textStyle="normal"
                android:text="@string/scots"
                android:textColor="@color/white"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/tv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:textStyle="normal"
                android:text="@string/scots"
                android:textColor="@color/white"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/tv6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="16sp"
                android:textStyle="normal"
                android:text="@string/scots"
                android:textColor="@color/white"
                android:layout_margin="5dp"/>



        </LinearLayout>
        </ScrollView>

</LinearLayout>